--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.19.2",
-    "express": "^4.17.1",
-    "sharp": "^0.26.2"
+    "express": "^4.17.1"
   }
 }
